1.0.2 (#74)
* optimize：优化扫描方法调用缓存的扫描过程

* style：代码格式规范化

* optimize：通知工具 NotificationUtil不再建议功能分左右键

* readme: READMD.md CHANGELOG.md update

* optimize : verifyPlugin 验证范围调整，只验证最新版本

* version : 插件版本调整至 1.0.2

* fix build error : org.jetbrains.changelog.exceptions.MissingVersionException: Version is missing: Unreleased